# CRM

./: .aider.chat.history.md  .aider.input.history  .gitignore  HOW_TO_UPDATE.md  README.md  SETUP.md  build-release.sh  index.html  package-lock.json  package.json  projects.md  roadmap.md  setup-env.sh  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  updater.key  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  llm.rs  main.rs  metrics.rs
src-tauri/tests/: llm_stubs_test.rs
src/__tests__/: App.test.tsx  useStore.test.ts
src/components/: AIActionModal.tsx  AddEditLeadModal.tsx  Chart.tsx  LeadCard.tsx  LeadsView.tsx  MetricsView.tsx  SetupWizard.tsx  Sidebar.tsx  SkeletonLeadCard.tsx
src/config/: validation.ts
src/store/: metricsStore.ts
src/stores/: useStore.ts
src/types/: index.ts
