[package]
name = "pubmetric-crm"
version = "0.1.0"
description = "A cozy, local CRM for PubMetric"
authors = ["you"]
license = ""
repository = ""
default-run = "pubmetric-crm"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pubmetric_crm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-process = "2.3.1"
